data/all_generated_tests/raw_wast_tests/br_StackCorruption_171.wast
;; 2. **Test Description:**    - Design a loop with an inner block containing a `br` instruction that jumps back to the beginning of the loop. Make the loop consume and produce a significant number of operands. Verify the operand stack management before and after the branch to ensure that the stack remains consistent and not corrupted.

(assert_invalid
  (module
    (func $test-loop-br-stack-manage
      (loop $loop (result i32 i32 i32 i32 i32)
        (i32.const 1) (i32.const 2) (i32.const 3) (i32.const 4) (i32.const 5)
        (block
          (br $loop)
        )
      )
    )
  )
  "type mismatch"
)